src/components/StaticFilterOptions.css
.filter-section {
    display: block; /* Display the filter containers inline */
    margin-right: 20px; /* Add some spacing between filter containers */
    margin-left: 20px;
    margin-top: 20px;
    z-index: 1;
  }
  
  .data-section {
    margin-top: 20px; /* Add spacing between filter containers and data sections */
  }
  
  /* Style for the filter container */
  .filter-container {
    display: inline-block;
    margin-right: 20px;
    vertical-align: top;
  }
  
  /* Style for the label */
  .filter-container label {
    margin-bottom: 1rem;
    font-weight: bold;
    font-family: "Calibri", sans-serif;
    font-size: 18px;
  }
  
  /* Style for the input */
  .filter-container input {
    padding: 0.5rem;
    border: 1px solid #ccc;
    border-radius: 4px;
    font-size: 1rem;
    outline: none;
  }
  
  /* Style for the search dropdown */
  .search-dropdown {
    position: relative;
    width: 200px;
  }
  
  /* Style for the dropdown input */
  .search-dropdown input {
    padding: 0.5rem;
    border: 1px solid #ccc;
    border-radius: 4px;
    font-size: 1rem;
    width: 100%;
    outline: none;
    cursor: pointer;
    z-index: 2;
  }
  
  /* Style for the checkbox list */
  .checkbox-list {
    position: absolute;
    top: 100%;
    left: 0;
    background-color: #fff;
    border: 1px solid #ccc;
    border-top: none;
    border-radius: 0 0 4px 4px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    width: 100%;
    max-height: 150px;
    overflow-y: auto;
  }
  
  /* Style for checkbox items */
  .checkbox-list div {
    display: flex;
    cursor: pointer;
    flex-wrap: wrap;
    flex-direction: row-reverse;
    align-items: baseline;
    align-content: stretch;
    justify-content: center;
  }
  
  /* Style for checkbox input and label */
  .checkbox-list input {
    margin-right: 0;
  }
  
  .checkbox-list label {
    display: flex;
    padding: 0.02rem;
    cursor: pointer;
    font-size: small;
  }
  
  .checkbox-list label span {
    margin-left: 0.05rem;
  }

